# JDReader

./: .gitignore  CMakeLists.txt  README.md  assets.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/reader/: ReaderView.cpp  ReaderView.h  WebBridge.cpp  WebBridge.h
src/resources/: inject.css  inject.js
src/sidebar/: BookshelfPanel.cpp  BookshelfPanel.h
src/storage/: BookmarkManager.cpp  BookmarkManager.h  Database.cpp  Database.h
